# hotaru

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python.yml
src/hotaru/: hotaru.py
tests/: test_hotaru.py
