[project]
name = "hotaru"
version = "0.1.0"
description = "AI for Ludo"
authors = [
    {name = "Komorebi Sakuramochi",email = "komorebi_sakuramochi@icloud.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]
scripts = {hotaru = "hotaru.hotaru:game"}

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.14.11,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
strict = true
