[project]
name = "hotaru"
version = "0.1.0"
description = "AI for Ludo"
authors = [
    {name = "Komorebi Sakuramochi",email = "komorebi_sakuramochi@icloud.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]
scripts = {hotaru = "hotaru.hotaru:cli"}

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.14.11,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
strict = true


[tool.tox]
requires = ["tox>=4.19"]
env_list = ["3.14", "3.13", "3.12", "type", "lint", "format"]


[tool.tox.env.lint]
description = "Lint"
commands = [["ruff", "check"]]


[tool.tox.env.format]
description = "Check format"
commands = [["ruff", "format", "--check"]]


[tool.tox.env.type]
description = "Run type checks"
commands = [["mypy", "."]]


[tool.tox.env_run_base]
description = "Run tests under {base_python}"
dependency_groups = ["dev"]
commands = [["pytest"]]
